fix: task update, task request, remove category name
